refact exceptionHandler